--- a/Threads.Identity/Threads.Identity.csproj
+++ b/Threads.Identity/Threads.Identity.csproj
@@ -8,7 +8,6 @@
 
 	<ItemGroup>
 		<Folder Include="Migrations\" />
-		<Folder Include="Services\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,11 +21,12 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Threads.Application\Threads.Application.csproj" />
-	  <ProjectReference Include="..\Threads.Domain\Threads.Domain.csproj" />
+		<ProjectReference Include="..\Threads.Application\Threads.Application.csproj" />
+		<ProjectReference Include="..\Threads.Domain\Threads.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
