--- a/Threads.Application/Threads.Application.csproj
+++ b/Threads.Application/Threads.Application.csproj
@@ -7,18 +7,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Features\[EntityName]s\Handlers\Commands\" />
-		<Folder Include="Features\[EntityName]s\Handlers\Queries\" />
-		<Folder Include="Features\[EntityName]s\Requests\Commands\" />
-		<Folder Include="Features\[EntityName]s\Requests\Queries\" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Threads.Domain\Threads.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
