--- a/Threads.Identity/Threads.Identity.csproj
+++ b/Threads.Identity/Threads.Identity.csproj
@@ -3,12 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Folder Include="Migrations\" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
